[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/spawners/EnemiesSpawner.gd" type="Script" id=1]

[node name="EnemiesSpawner" type="Node"]

script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="DifficulTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="DifficulTimer" to="." method="_on_DifficulTimer_timeout"]


